--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ScopeSync by bcmodular</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="ScopeSync : A set of tools for synchronising DAWs with Sonic|Core&#39;s Scope application" />
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>ScopeSync</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/bcmodular/scopesync">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/bcmodular/scopesync/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/bcmodular/scopesync/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/bcmodular/scopesync">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>ScopeSync</h1>
-          <p>A set of tools for synchronising DAWs with Sonic|Core&#39;s Scope application</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/bcmodular">bcmodular</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">ScopeSync</h1>
+          <h2 id="project_tagline">A set of tools for synchronising DAWs with Sonic|Core&#39;s Scope application</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/bcmodular/scopesync/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/bcmodular/scopesync/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="welcome-to-scopesync" class="anchor" href="#welcome-to-scopesync"><span class="octicon octicon-link"></span></a>Welcome to ScopeSync.</h3>
 
@@ -53,9 +46,16 @@
 
 <p>For any questions, please find us at the <a href="http://www.bcmodular.co.uk/forum/">BCModular Forum</a></p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">ScopeSync maintained by <a href="https://github.com/bcmodular">bcmodular</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -66,6 +66,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
