--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Main authors: <a href="https://github.com/bcsharc" class="user-mention">@bcsharc</a> and <a href="https://github.com/wellis" class="user-mention">@wellis</a></p>
+<p>Main authors: <a href="https://github.com/bcsharc" class="user-mention">@bcsharc</a>, <a href="https://github.com/wellis" class="user-mention">@wellis</a> and <a href="https://github.com/jssbrandt" class="user-mention">@jssbrandt</a></p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
