--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>For any questions, please find us at the <a href="http://www.bcmodular.co.uk/forum/">BCModular Forum</a></p>
+
+<h3>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>Licence</h3>
+<p>Most elements of ScopeSync are licenced under Creative Commons 4.0, except VST plugins that are licenced under GPL (licence included in package)</p>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">ScopeSync</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.scopesync.co.uk/" property="cc:attributionName" rel="cc:attributionURL">bcmodular</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+
       </section>
 
     </div>
