--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>ScopeSync</h1>
-          <p>A system for high resolution parameter control and MIDI pass-through from a DAW to Sonic|Core&#39;s Scope application</p>
+          <p>A system for high resolution parameter control between a DAW and Sonic|Core&#39;s Scope application</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/bcmodular">bcmodular</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
