Licence Info Update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h3>
 <a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h3>
-<p>Most elements of ScopeSync are licensed under Creative Commons 4.0, except Java code and VST plugins that will be licensed under <a rel="licence" href="https://www.gnu.org/licenses/quick-guide-gplv3.html">GPLv3</a> (licence to be included in package)</p>
+<p>Most elements of ScopeSync are licensed under Creative Commons 4.0, except Java code, VST plugin and ScopeFX content that will be licensed under <a rel="licence" href="https://www.gnu.org/licenses/quick-guide-gplv3.html">GPLv3</a> (licence to be included in package)</p>
 <a rel="licence" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">ScopeSync</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.scopesync.co.uk/" property="cc:attributionName" rel="cc:attributionURL">bcmodular</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 
       </section>
